--- a/static/css/main.css
+++ b/static/css/main.css
@@ -22,7 +22,6 @@ table tr td div {
 }
 
 canvas {
-    border: black solid;
     position: absolute;
     display: none;
 }
@@ -30,6 +29,10 @@ canvas {
 a {
     text-decoration-line: none;
     float: right;
+}
+
+input {
+    cursor: pointer;
 }
 
 #options {
